html/css/custom.css
.ui-tabs .ui-tabs-nav li .close {
	position: absolute;
	right: .5em;
    display: block; margin: 1px;
    background-image: url(sunny/images/ui-icons_d19405_256x240.png);
	background-position: -96px -128px;
    text-indent: -9999em;
    right: .0em;
    top: 50%;
    width: 18px;
    margin: -10px -6px 0 0;
    padding: 1px;
    height: 18px;
}


/* Colors for widget header*/
.color-1 {background:#fde5a7;}
.color-2 {background:#ffe271;}
.color-3 {background:#FDD347;}
.color-4 {background:#d19405;}
.color-5 {background:#494437;}
.color-6 {background:#8e846b;}
.color-7 {background:#381f00;}
.color-8 {background:#817865;}
.color-1 h3,
.color-2 h3,
.color-4 h3,
.color-3 h3
	{color:#000;}
.color-6 h3,
.color-5 h3
	{color:#FFF;}
/* End Colors */

	/**
	 *	To have the slider buttons to open and close frames
	 */

	.ui-layout-pane { /* all 'panes' */
		background: #FFF;
		border: 1px solid #BBB;
		padding: 10px;
		overflow: auto;
	}

	.ui-layout-resizer { /* all 'resizer-bars' */
		background: #fde5a7;
	}

	.ui-layout-toggler { /* all 'toggler-buttons' */
		background: #494437;
	}

	.ui-corner-all { -moz-border-radius: 6px; -webkit-border-radius: 6px;}

.imageContain {
 	-moz-border-radius: 2px;
    -webkit-border-radius: 2px;
    border: groove #8e846b;
    width: 100%;
}

.imageContain img {
 	width: 80px;
 	margin-left: auto;
 	display: block;
 	margin-right: auto;
 	vertical-align: middle ;
}
.imageContain p {
	text-align: center;
	font-size: 0.7em;
}

.top-panel {
    height:7em;
    width:15em;
    float:left;
    margin-right:0.5em;
}

.inettuts-container {
    min-height:300px;
}

/*  for medical history widget */
.High { color: #ff0033; }

/* for problem list widget */
.Inactive { color: #666666; }

